<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RRaptor</string>
    <string name="title_activity_rraptor">RRaptor: Control panel</string>
    <string name="title_activity_plotter2d">RRaptor: 2D plotter</string>
    <string name="title_activity_manual">RRaptor: Manual pult</string>
    <string name="title_activity_calibrate">RRaptor: Calibrate</string>
    <string name="title_activity_info">RRaptor: Device info</string>
    <string name="title_activity_drawing_progress">RRaptor: Drawing progress</string>
    <string name="title_activity_debug">RRaptor: Debug</string>
    
    <!-- Control panel -->
    <string name="rraptor_plotter2d">2D plotter</string>
    <string name="rraptor_manual_pult">Manual pult</string>
    <string name="rraptor_calibrate">Calibrate</string>
    <string name="rraptor_info">Device info</string>
    <string name="rraptor_drawing_progress">Drawing progress</string>
    
    <string name="action_debug">Debug</string>
    
    <!-- System status -->
    <string name="rr_device_status_idle">idle</string>
    <string name="rr_device_status_working">working</string>
    <string name="rr_drawing_status_drawing">drawing</string>
    <string name="rr_drawing_status_paused">paused</string>
        
    <!-- Device connection -->
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_error">Error</string>
    <string name="connect">Connect</string>
    
    <!-- Device info -->
    <string name="info_connection_status">Connection status</string>
    <string name="info_connection_type">Connection type</string>
    <string name="info_connection_info">Connection info</string>
    <string name="info_device_name">Name</string>
    <string name="info_device_model">Model</string>
    <string name="info_device_serial_number">Serial number</string>
    <string name="info_device_description">Description</string>
    <string name="info_device_version">Version</string>
    <string name="info_device_manufacturer">Manufacturer</string>
    <string name="info_device_uri">Site</string>
    <string name="info_device_status">Device status</string>
    <string name="info_working_area_dim">Working area</string>
    <string name="info_current_pos">Current position</string>
    
    <!-- Drawing status -->
    <string name="start_drawing">Draw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
        
    <string name="drawing_status_not_connected">Not connected</string>
    <string name="drawing_status_load_drawing">Load drawing</string>
    <string name="drawing_status_ready_to_draw">Ready to draw</string>
    <string name="drawing_status_drawing">Drawing</string>
    <string name="drawing_status_paused">Paused</string>
    
    <!-- Debug -->
    <string name="clear_log">Clear log messages</string>
   

    <!-- Yandex.Disk -->
    <string name="example_no_files">No files</string>
    <string name="example_auth_title">Auth</string>
    <string name="example_auth_message">Start browser to authorize?</string>
    <string name="example_auth_positive_button">OK</string>
    <string name="example_auth_negative_button">Exit</string>
    <string name="example_loading_file_title">Loading file</string>
    <string name="example_loading_file_cancel_button">Cancel</string>
    <string name="example_loading_file_chooser_title">Open file</string>
    <string name="example_get_file_unsupported_scheme">Unsupported scheme</string>
    
</resources>
